--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>jdbc</groupId>
+            <artifactId>jdbc</artifactId>
+            <version>2.0</version>
+        </dependency>
     </dependencies>
 
     <build>
